--- a/package.json
+++ b/package.json
@@ -1,22 +1,43 @@
 {
-  "name": "cook",
+  "name": "trading-strategy-tester",
   "version": "1.0.0",
-  "description": "",
-  "main": "main.js",
+  "description": "Desktop application for traders and quants to backtest trading strategies",
+  "main": "electron/main.js",
   "scripts": {
+    "dev": "concurrently \"npm run dev:frontend\" \"npm run dev:backend\" \"wait-on http://localhost:3000 && electron .\"",
+    "dev:frontend": "cd frontend && npm run dev",
+    "dev:backend": "cd backend && python -m uvicorn main:app --reload --host 0.0.0.0 --port 8000",
+    "build": "cd frontend && npm run build",
     "start": "electron .",
-    "dev": "concurrently \"npm run electron\" \"npm run react\"",
-    "electron": "wait-on http://localhost:5173 && electron .",
-    "react": "cd frontend && npm run dev",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "package": "electron-builder",
+    "dist": "npm run build && electron-builder"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "type": "commonjs",
+  "keywords": ["trading", "backtesting", "electron", "react", "python"],
+  "author": "Your Name",
+  "license": "MIT",
   "devDependencies": {
-    "concurrently": "^9.2.0",
-    "electron": "^37.2.4",
-    "wait-on": "^8.0.4"
+    "electron": "^28.0.0",
+    "electron-builder": "^24.9.1",
+    "concurrently": "^8.2.2",
+    "wait-on": "^7.2.0"
+  },
+  "build": {
+    "appId": "com.tradingstrategy.tester",
+    "productName": "Trading Strategy Tester",
+    "directories": {
+      "output": "dist"
+    },
+    "files": [
+      "electron/**/*",
+      "frontend/dist/**/*",
+      "backend/**/*",
+      "!**/node_modules/**/*"
+    ],
+    "extraResources": [
+      {
+        "from": "backend",
+        "to": "backend"
+      }
+    ]
   }
-}
+} 
