--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,15 +10,18 @@
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.0.2",
+    "@types/plotly.js": "^3.0.3",
     "chart.js": "^4.5.0",
     "chartjs-plugin-annotation": "^3.1.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "lucide-react": "^0.294.0",
     "next": "14.0.3",
+    "plotly.js": "^3.0.3",
     "react": "18.2.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "18.2.0",
+    "react-plotly.js": "^2.6.0",
     "recharts": "^2.8.0",
     "tailwind-merge": "^2.0.0"
   },
